--- a/app/App/User/PrivateMessage/Thread/Thread.html
+++ b/app/App/User/PrivateMessage/Thread/Thread.html
@@ -9,7 +9,7 @@
 <main class="container" role="main">
     <div class="row">
         <div class="col-sm-10">
-            <h1 class="page-heading">Nouveau message</h1>
+            <h1 class="page-heading">Fil de discussion</h1>
             <div ui-view="comment"></div>
         </div>
         <div class="col-sm-2">
@@ -24,4 +24,5 @@
                 </div>
             </div>
         </div>
+    </div>
 </main>
