--- a/app/index.html
+++ b/app/index.html
@@ -202,6 +202,7 @@
     <script type="text/javascript" src="/webapp/app/System/Services/BibliographyService.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Services/CommentService.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Services/CommentLogService.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Services/ContributorService.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Services/ContactService.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Services/ContentService.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Services/EntityService.js"></script>
