--- a/app/App/Taxonomy/tpl/form-bibliography.html
+++ b/app/App/Taxonomy/tpl/form-bibliography.html
@@ -3,7 +3,10 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title" id="addBibliographicElementModalLabel">Ajouter une référence bibliographique</h3>
+                <h3 class="modal-title" id="addBibliographicElementModalLabel">
+                    <span ng-if="bibliography.addForm.id === null">Ajouter une référence bibliographique</span>
+                    <span ng-if="bibliography.addForm.id !== null">Modifier une référence bibliographique</span>
+                </h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -12,22 +15,31 @@
                 <form class="form-control-sm">
                     <div class="form-group" ng-if="bibliography.addForm.id === null && bibliography.addForm.type === null">
                         <h4>Type d'entrée bibliographique</h4>
-                        <label class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" name="app-transcript-interaction-form-biblio-add-type" id="app-transcript-interaction-form-biblio-add-type-1" ng-model="bibliography.addForm.type" value="printedReference" checked="checked" >
-                            <span class="custom-control-label">Référence imprimée</span>
-                        </label>
-                        <label class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" name="app-transcript-interaction-form-biblio-add-type" id="app-transcript-interaction-form-biblio-add-type-2" ng-model="bibliography.addForm.type" value="manuscriptReference">
-                            <span class="custom-control-label">Référence manuscrite</span>
-                        </label>
-                        <label class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" name="app-transcript-interaction-form-biblio-add-type" id="app-transcript-interaction-form-biblio-add-type-3" ng-model="bibliography.addForm.type" value="freeReference">
-                            <span class="custom-control-label">Référence libre</span>
-                        </label>
+                        <div class="form-check">
+                            <label class="custom-control custom-radio mr-2">
+                                <input class="custom-control-input" type="radio" name="app-transcript-interaction-form-biblio-add-type" data-ng-model="bibliography.addForm.type" id="app-transcript-interaction-form-biblio-add-type-1" value="printedReference" checked="checked">
+                                <span class="custom-control-indicator"></span>
+                                <span class="custom-control-label">Référence imprimée</span>
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="custom-control custom-radio mr-2">
+                                <input class="custom-control-input" type="radio" name="app-transcript-interaction-form-biblio-add-type" data-ng-model="bibliography.addForm.type" id="app-transcript-interaction-form-biblio-add-type-2" value="manuscriptReference">
+                                <span class="custom-control-indicator"></span>
+                                <span class="custom-control-label">Référence manuscrite</span>
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <label class="custom-control custom-radio mr-2">
+                                <input class="custom-control-input" type="radio" name="app-transcript-interaction-form-biblio-add-type" data-ng-model="bibliography.addForm.type" id="app-transcript-interaction-form-biblio-add-type-3" value="freeReference">
+                                <span class="custom-control-indicator"></span>
+                                <span class="custom-control-label">Référence libre</span>
+                            </label>
+                        </div>
                     </div>
 
                     <div ng-if="bibliography.addForm.type === 'printedReference'">
-                        <div class="float-right">
+                        <div class="float-right" ng-if="bibliography.addForm.id === null">
                             <button class="btn btn-sm btn-primary" ng-click="bibliography.action()">Retour</button>
                         </div>
                         <div class="form-group">
@@ -69,7 +81,7 @@
                         </fieldset>
                     </div>
                     <div ng-if="bibliography.addForm.type === 'manuscriptReference'">
-                        <div class="float-right">
+                        <div class="float-right" ng-if="bibliography.addForm.id === null">
                             <button class="btn btn-sm btn-primary" ng-click="bibliography.action()">Retour</button>
                         </div>
                         <div class="form-group">
@@ -98,7 +110,7 @@
                         </div>
                     </div>
                     <div ng-if="bibliography.addForm.type === 'freeReference'">
-                        <div class="float-right">
+                        <div class="float-right" ng-if="bibliography.addForm.id === null">
                             <button class="btn btn-sm btn-primary" ng-click="bibliography.action()">Retour</button>
                         </div>
                         <div class="form-group">
@@ -109,6 +121,14 @@
                 </form>
             </div>
             <div class="modal-footer">
+                <div class="float-left" ng-if="bibliography.addForm.id !== null">
+                    <button type="submit" class="btn btn-sm btn-danger"
+                            data-mw-confirm-click="bibliography.remove.action(bibliography.addForm.id)" data-mw-confirm-click-message="Êtes-vous sûr de vouloir supprimer cette référence ?">
+                        <span ng-if="bibliography.remove.success == false && bibliography.remove.loading == false">Supprimer</span>
+                        <span ng-if="bibliography.remove.success == false && bibliography.remove.loading == true">Suppression <i class="fa fa-spin fa-circle-o-notch"></i></span>
+                        <span ng-if="bibliography.remove.success == true">Succès !</span>
+                    </button>
+                </div>
                 <button type="submit" class="btn btn-sm btn-secondary"
                         ng-if="bibliography.addForm.id !== null"
                         ng-click="bibliography.form.submit.action('patch', bibliography.addForm.id)" >
