--- a/app/App/Taxonomy/tpl/form-place.html
+++ b/app/App/Taxonomy/tpl/form-place.html
@@ -4,25 +4,29 @@
         <input id="app-entity-edit-name" class="form-control form-control-sm" ng-model="entity.name" required="required" />
     </div>
     <div class="form-group col-md-6">
-        <label for="app-entity-edit-city" class="form-control-label">Ville</label>
-        <input id="app-entity-edit-city" class="form-control form-control-sm" ng-model="entity.city" placeholder="Si la localité n'est pas une ville" />
+        <label for="app-entity-edit-indexName" class="form-control-label">Indexation <span class="red-color">*</span></label>
+        <input id="app-entity-edit-indexName" class="form-control form-control-sm" ng-model="entity.indexName" required="required" />
     </div>
 </div>
 
 <div class="form-row">
+    <div class="form-group col-md-6">
+        <label for="app-entity-edit-city" class="form-control-label">Ville</label>
+        <input id="app-entity-edit-city" class="form-control form-control-sm" ng-model="entity.city" placeholder="Si la localité n'est pas une ville" />
+    </div>
     <div class="form-group col-md-6">
         <label for="app-entity-edit-frenchDepartement" class="form-control-label">Département</label>
         <input id="app-entity-edit-frenchDepartement" class="form-control form-control-sm" ng-model="entity.frenchDepartement" />
         <small class="form-text text-muted">Pour les localités françaises seulement</small>
     </div>
+</div>
+
+<div class="form-row">
     <div class="form-group col-md-6">
         <label for="app-entity-edit-frenchRegion" class="form-control-label">Région</label>
         <input id="app-entity-edit-frenchRegion" class="form-control form-control-sm" ng-model="entity.frenchRegion" />
         <small class="form-text text-muted">Pour les localités françaises seulement</small>
     </div>
-</div>
-
-<div class="form-row">
     <div class="form-group col-md-6">
         <label for="app-entity-edit-country" class="form-control-label">Pays</label>
         <input id="app-entity-edit-country" class="form-control form-control-sm" ng-model="entity.country" />
