--- a/app/System/Navbar/Navbar.html
+++ b/app/System/Navbar/Navbar.html
@@ -1,4 +1,4 @@
-<div class="row align-items-end header">
+<div class="row align-items-end" ng-class="{'header': env == 'prod', 'header-dev': env == 'dev'}">
     <div class="col-10 p-0"></div>
     <div class="col-2 user-nav p-0">
         <div class="header-user">
@@ -31,6 +31,7 @@
                         <div class="dropdown-menu">
                             <a><a class="dropdown-item" ui-sref="transcript.app.search"><i class="fa fa-search"></i> Rechercher un testament</a></a>
                             <a><a class="dropdown-item" ui-sref="transcript.app.content({id: preferences.helpHomeContent})"><i class="fa fa-question"></i> Aide</a></a>
+                            <a><a class="dropdown-item" ui-sref="transcript.app.content({id: preferences.helpHomeContent})"><i class="fa fa-question"></i> Aide</a></a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -47,18 +48,19 @@
                     <div class="nav-link"><a class="d-inline-block" ui-sref="transcript.app.security.register">s'inscrire</a> <span>|</span> <a  class="d-inline-block" ui-sref="transcript.app.security.login">se connecter</a></div>
                 </li>
                 <li ng-if="user != null" id="user-menu" class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">tableau de bord <span class="badge badge-danger" ng-if="user._embedded.unreadMessages > 0">{{ user._embedded.unreadMessages }}</span></a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" ui-sref="transcript.app.user.profile({id: user.id})">Profil</a>
-                    <a class="dropdown-item" ui-sref="transcript.app.user.private-message.list({id: user.id})">Messagerie privée <span class="badge badge-danger">{{ user._embedded.unreadMessages }}</span></a>
-                    <a class="dropdown-item" ui-sref="transcript.app.training.content({order: '0'})" ng-if="user._embedded.preferences.tutorialStatus == 'todo' || user._embedded.preferences.tutorialStatus == 'done' || user._embedded.preferences.tutorialStatus == 'notInterested'">Tutoriel sur la transcription</a>
-                    <a class="dropdown-item" ui-sref="transcript.app.training.content({order: user._embedded.preferences.tutorialProgress})" ng-if="user._embedded.preferences.tutorialStatus == 'inProgress'">Tutoriel sur la transcription</a>
-                    <a class="dropdown-item" ui-sref="transcript.app.user.preferences({id: user.id})">Préférences</a>
-                    <a class="dropdown-item" ui-sref="transcript.app.security.logout">Déconnexion</a>
-                    <div role="separator" class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="https://testaments-de-poilus.myjetbrains.com/" target="_blank">BugTracker</a>
-                    <a class="dropdown-item" permission permission-only="'ROLE_ADMIN'" ui-sref="transcript.admin.home">Admin</a>
-                </div>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">tableau de bord <span class="badge badge-danger" ng-if="user._embedded.unreadMessages > 0">{{ user._embedded.unreadMessages }}</span></a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" ui-sref="transcript.app.user.profile({id: user.id})">Profil</a>
+                        <a class="dropdown-item" ui-sref="transcript.app.user.private-message.list({id: user.id})">Messagerie privée <span class="badge badge-danger">{{ user._embedded.unreadMessages }}</span></a>
+                        <a class="dropdown-item" ui-sref="transcript.app.training.content({order: '0'})" ng-if="user._embedded.preferences.tutorialStatus == 'todo' || user._embedded.preferences.tutorialStatus == 'done' || user._embedded.preferences.tutorialStatus == 'notInterested'">Tutoriel sur la transcription</a>
+                        <a class="dropdown-item" ui-sref="transcript.app.training.content({order: user._embedded.preferences.tutorialProgress})" ng-if="user._embedded.preferences.tutorialStatus == 'inProgress'">Tutoriel sur la transcription</a>
+                        <a class="dropdown-item" ui-sref="transcript.app.user.preferences({id: user.id})">Préférences</a>
+                        <a class="dropdown-item" ui-sref="transcript.app.security.logout">Déconnexion</a>
+                        <div role="separator" class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://testaments-de-poilus.myjetbrains.com/" target="_blank">BugTracker</a>
+                        <a class="dropdown-item" permission permission-only="'ROLE_ADMIN'" ui-sref="transcript.admin.home">Admin</a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </div>
