--- a/app/App/Training/Content/Exercise/Exercise/Exercise.html
+++ b/app/App/Training/Content/Exercise/Exercise/Exercise.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<main class="container" role="main" ng-if="trainingContent.pageStatus == 'public'">
+<main class="container" role="main" ng-if="trainingContent.pageStatus == 'public' || (trainingContent.status != 'public' && (user.roles | contains:'ROLE_ADMIN'))">
     <div ng-include="'/webapp/app/App/Training/Content/tpl/content-header.html'"></div>
 
     <div class="row mt-4">
