--- a/app/Admin/Entity/List/List.html
+++ b/app/Admin/Entity/List/List.html
@@ -45,8 +45,8 @@
     <table class="table table-bordered table-striped">
         <tr>
             <th>#</th>
-            <th><a ng-click="entitiesSorting = 'willNumber'" title="Trier par numéro d'identification du testament">IdNum <i class="fa fa-caret-down"></i></a></th>
-            <th><a ng-click="entitiesSorting = 'will.id'" title="Trier par id d'entitié">IdInterne <i class="fa fa-caret-down"></i></a></th>
+            <th><a ng-click="entitiesSorting = 'id'" title="Trier par numéro d'identification du testament">IdNum <i class="fa fa-caret-down"></i></a></th>
+            <th><a ng-click="entitiesSorting = 'willNumber'" title="Trier par id d'entitié">IdInterne <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = 'will.hostingOrganization.name'" title="Trier par institution de conservation">Institution <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = 'will.title'" title="Trier par titre du testament">Titre <i class="fa fa-caret-down"></i></a></th>
             <th><a ng-click="entitiesSorting = 'will.willWritingYear'" title="Trier par année de rédaction du testament">Rédaction <i class="fa fa-caret-down"></i></a></th>
