--- a/app/App/Training/Content/Exercise/Exercise/Exercise.html
+++ b/app/App/Training/Content/Exercise/Exercise/Exercise.html
@@ -17,9 +17,9 @@
         <div class="col-md-4 order-md-1 d-print-none">
             <div class="card">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item" ng-repeat="content in trainingContents | orderBy:'orderInTraining'">
+                    <li class="list-group-item" ng-repeat="content in trainingContents | orderBy:'orderInTraining'" ng-if="content.pageStatus == 'public' || (content.pageStatus != 'public' && (user.roles | contains:'ROLE_ADMIN'))">
                         <a ng-if="content.id != trainingContent.id" ui-sref="transcript.app.training.content({ order: content.orderInTraining })">{{ content.title }}</a>
-                        <span class="active" ng-if="content.id === trainingContent.id" ui-sref="transcript.app.training.content({ order: content.orderInTraining })">{{ content.title }}</span>
+                        <span class="active" ng-if="content.id === trainingContent.id">{{ content.title }}</span>
                     </li>
                 </ul>
             </div>
